addition of overflow x hidden to prevent animation messing up the window

--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,15 @@
   src: local("Oswald-Regular.ttf"),
     url("./fonts/static/Oswald-Regular.ttf") format("truetype");
 }
+html {
+  overflow-x: hidden;    /*  because animation come from right and cause some overflow**/
+}
 body{
   font-family: "Oswald";
   background-color: #111F44;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 h2 {
   color: #C5D1ED;
